@@ -1,7 +1,7 @@
 apply plugin: 'java'
 apply plugin: 'idea'
-apply plugin: 'artifactory'
 apply plugin: 'application'
+apply from: 'common-utils.gradle'
 
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
@@ -16,6 +16,8 @@ version = new File("${projectDir}/version.txt").text
 def snapshotVersion = version + "-SNAPSHOT"
 
 project.ext.isDevBuild = !project.ext.properties.containsKey("buildConfig") || !"release".equals(project.ext.buildConfig)
+
+apply from: 'common.gradle'
 
 if (project.ext.isDevBuild) {
     def buildNumber = "dev";
@@ -41,35 +43,7 @@ buildscript {
     }
 }
 
-repositories {
-    repositories {
-        maven {
-            url 'http://artifactory.office/artifactory/plugins-dev'
-        }
-        maven {
-            url 'http://artifactory.office/artifactory/plugins-release'
-        }
-        maven {
-            url 'https://oss.sonatype.org/content/repositories/snapshots'
-        }
-        ivy {
-            url "http://artifactory.office/artifactory/simple/services-dev"
-            layout "pattern", {
-                artifact "[organization]/[module]/[revision]/[artifact]-[revision](-[suffix]).[ext]"
-            }
-        }
-        ivy {
-            url "http://artifactory.office/artifactory/simple/services-release"
-            layout "pattern", {
-                artifact "[organization]/[module]/[revision]/[artifact]-[revision](-[suffix]).[ext]"
-            }
-        }
-    }
-}
-
 configurations {
-    codeCoverage
-    codeCoverageAnt
     publish
     publishDev
     integrationTests
@@ -94,35 +68,6 @@ artifacts {
 
     publish jar
     publish distTar
-}
-
-artifactory {
-    publish {
-        contextUrl = 'http://artifactory.office/artifactory'   //The base Artifactory URL for the publisher
-        repository {
-            repoKey = 'services-release'//The Artifactory repository key to publish to
-            if (project.ext.isDevBuild) {
-                repoKey = 'services-dev'
-            }
-            username = 'build'          //The publisher user name
-            password = 'P4ssw0rd'       //The publisher password
-            ivy {
-                ivyLayout = '[organization]/[module]/[revision]/ivy-[revision].xml'
-                artifactLayout = '[organization]/[module]/[revision]/[artifact]-[revision](-[suffix]).[ext]'
-                mavenCompatible = false //Convert any dots in an [organization] layout value to path separators, similar to Maven's groupId-to-path conversion. True if not specified
-            }
-        }
-        defaults {
-            def cc = 'publish'
-            if (project.ext.isDevBuild) {
-                cc = 'publishDev'
-            }
-            publishConfigs(cc)
-            publishBuildInfo = true
-            publishArtifacts = true
-            publishPom = false
-        }
-    }
 }
 
 task setupIntegration << {
@@ -193,68 +138,13 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.+'
     testCompile group: "org.mockito", name: "mockito-all", version: "1.9.5"
 
-    codeCoverage 'org.jacoco:org.jacoco.agent:0.5.10.201208310627:runtime@jar'
-    codeCoverageAnt 'org.jacoco:org.jacoco.ant:0.5.10.201208310627'
-
     integrationTests group: 'com.flightstats', name: 'datahub', version: snapshotVersion + '+', transitive: false, configuration: 'publishDev'
     deployStaging group: 'com.flightstats', name: 'datahub', version: version, transitive: false, configuration: 'publish'
     deployProduction group: 'com.flightstats', name: 'datahub', version: version, transitive: false, configuration: 'publish'
 }
 
-test {
-    systemProperties = System.properties
-    jvmArgs "-javaagent:${configurations.codeCoverage.asPath}=destfile=${project.buildDir.path}/coverage-results/jacoco.exec,sessionid=HSServ,append=false",
-            '-Djacoco=true',
-            '-Xms128m',
-            '-Xmx512m',
-            '-XX:MaxPermSize=128m'
-}
-
-// From: http://www.zorched.net/2012/09/13/java-7-code-coverage-with-gradle-and-jacoco/
-task generateCoverageReport << {
-    ant {
-        taskdef(name: 'jacocoreport', classname: 'org.jacoco.ant.ReportTask', classpath: configurations.codeCoverageAnt.asPath)
-
-        mkdir dir: "build/reports/coverage"
-
-        jacocoreport {
-            executiondata {
-                fileset(dir: "build/coverage-results") {
-                    include name: 'jacoco.exec'
-                }
-            }
-            structure(name: project.name) {
-                classfiles {
-                    fileset(dir: "build/classes/main") {
-                    }
-                }
-                sourcefiles(encoding: 'UTF-8') {
-                    fileset dir: "src/main/java"
-                }
-            }
-
-            xml destfile: "build/reports/coverage/jacoco.xml"
-            html destdir: "build/reports/coverage"
-        }
-    }
-}
-
 distTar {
     compression = Compression.GZIP
-}
-
-def runExternal(commandline) {
-    def proc = commandline.execute()
-    showExternalOutput(proc)
-}
-
-def showExternalOutput(proc) {
-    proc.in.eachLine { line -> println line }
-    proc.err.eachLine { line -> println 'ERROR: ' + line }
-    proc.waitFor()
-    if (proc.exitValue()) {
-        System.exit(proc.exitValue())
-    }
 }
 
 task deployDev << {
@@ -264,41 +154,10 @@ task deployDev << {
     runExternal("${projectDir}/bin/deploy-to-host.sh datahub-02.cloud-east.dev memory")
 }
 
-def copyTarballToDistributions(configuration) {
-    def distributionsDir = new File("${buildDir}/distributions")
-    distributionsDir.mkdirs()
-    def deployTarball = configuration.files.find {
-        it.name.endsWith('tgz')
-    }
-    copy {
-        from deployTarball
-        into distributionsDir
-    }
-}
-
 task deployStaging << {
     description = "Deploys the distribution to the staging environment"
     copyTarballToDistributions(configurations.deployStaging)
     runExternal("${projectDir}/bin/deploy-to-host.sh datahub-01.cloud-east.staging")
-}
-
-def incrementVersionFile() {
-    def currentVersion = version
-    def major = currentVersion.replaceFirst(/(\d+\.\d+)\.\d+/, '$1')
-    def minor = currentVersion.replaceFirst(/\d+\.\d+\.(\d+)/, '$1').toInteger()
-    minor++
-    def newVersion = major + '.' + minor
-    new File("${projectDir}/version.txt").write(newVersion)
-    println "New version updated to: ${newVersion}."
-}
-
-def commitVersionFileAndPush() {
-    println "Adding new version file (version.txt) to git..."
-    runExternal "git checkout master"
-    runExternal "git add version.txt"
-    def commandParts = ["git", "commit", "-m", "Increment build after production deployment.", "version.txt"]
-    showExternalOutput(commandParts.execute())
-    runExternal "git push origin master"
 }
 
 task deployProduction << {
